[package]
name = "nu_plugin_semver"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
version = "0.3.0"
edition = "2021"
description = "A nushell plugin for dealing with SemVer versions"
keywords = ["nu", "plugin", "semver", "versioning"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/abusch/nu_plugin_semver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.93.0"
nu-plugin-test-support = "0.93.0"
nu-protocol = "0.93.0"
semver = { version = "1.0.20", features = ["serde"] }
serde = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
typetag = "0.2"

# [patch.crates-io]
# nu-plugin = { git = "https://github.com/nushell/nushell/" }
# nu-protocol = { git = "https://github.com/nushell/nushell/" }
