[package]
name = "nu_plugin_semver"
authors = ["Antoine Busch <antoine.busch@gmail.com>"]
version = "0.7.0"
edition = "2021"
description = "A nushell plugin for dealing with SemVer versions"
keywords = ["nu", "plugin", "semver", "versioning"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/abusch/nu_plugin_semver"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nu-plugin = "0.97.1"
nu-protocol = { version = "0.97.1", features = ["plugin"] }
semver = { version = "1.0.23", features = ["serde"] }
serde = "1"
strum = { version = "0.26", features = ["derive"] }
thiserror = "1"
typetag = "0.2"

[dev-dependencies]
nu-plugin-test-support = "0.97.1"

# [patch.crates-io]
# nu-plugin = { git = "https://github.com/nushell/nushell/" }
# nu-protocol = { git = "https://github.com/nushell/nushell/" }
# nu-plugin-test-support = { git = "https://github.com/nushell/nushell/" }
